frontend/src/components/primaryButton/PrimaryButton.module.css
.btn:hover {
  --hover-colour: var(--mediumGreen);
}

.textWrapper {
  composes: fontSub from '../../globalStyles/Typography.module.css';
  color: var(--piTopGreen);
  font-weight: 800;
  white-space: nowrap;
  background-color: var(--hover-colour);
  font-size: 14px;
}

.border {
  stroke: var(--piTopGreen);
  stroke-width: 2px;
}

.rolloverFill {
  fill: var(--hover-colour);
}

.rolloverBG {
  background-color: var(--hover-colour);
}

button[disabled]:hover {
  --hover-colour: transparent;
}

/* structural stuff */
.primaryButtonSVGContainer {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

.btn {
  position: relative;
  display: inline-grid;
  --hover-colour: transparent;
  color: var(--btnColour, var(--piTopGreen));
  padding: 3px 25px;
  min-height: 34px;
  min-width: 128px;
}

.textWrapper {
  position: relative;
  display: inline-block;
  box-sizing: border-box;
  min-height: 20px;
  line-height: 2;
}

@supports (-moz-osx-font-smoothing: auto) {
  .fix {
    transform: translateY(1px)
  }
}
@-moz-document url-prefix('') {
  .fix2 {
    x: 0;
  }
}

